<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for <xliff:g id="discoverable_time_period">%1$s</xliff:g> seconds\u2026</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">
      Prevent use of the bluetooth dialer when the screen is locked
    </string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_disconnect_blank"><xliff:g id="device_name">%1$s</xliff:g> will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting\u2026</string>
    <string name="bluetooth_connecting">Connecting\u2026</string>
    <string name="bluetooth_unknown"></string>
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing\u2026</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device">handsfree/headset</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with\u0020</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">"Bluetooth permission request"</string>
    <string name="bluetooth_ask_enablement">"An application on your phone is requesting permission to turn on Bluetooth. Do you want to do this?"</string>
    <string name="bluetooth_ask_discovery">"An application on your phone is requesting permission to make your phone discoverable by other Bluetooth devices for <xliff:g id="timeout">%1$d</xliff:g> seconds. Do you want to do this?"</string>
    <string name="cancel">Cancel</string>
    <string name="settings_label">Settings</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="unlock_set_unlock_launch_picker_change_title">Change screen lock</string>
    <string name="unlock_set_unlock_launch_picker_change_summary">Change or disable pattern, PIN, or password security</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="baseband_version">Baseband version</string>
    <string name="device_info_not_available">Not available</string>
    <string name="device_status_activity_title">Status</string>
    <string name="storage_settings">SD card &amp; phone storage</string>
    <string name="status_imei">IMEI</string>
    <string name="status_imei_sv">IMEI SV</string>
    <string name="status_number">My phone number</string>
    <string name="status_min_number">MIN</string>
    <string name="status_prl_version">PRL Version</string>
    <string name="status_meid_number">MEID</string>
    <string name="status_network_type">Mobile network type</string>
    <string name="status_data_state">Mobile network state</string>
    <string name="status_service_state">Service state</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="status_roaming">Roaming</string>
    <string name="status_operator">Network</string>
    <string name="status_wifi_mac_address">Wi-Fi MAC address</string>
    <string name="status_bt_address">Bluetooth address</string>
    <string name="status_up_time">Up time</string>
    <string name="battery_status_title">Battery status</string>
    <string name="battery_level_title">Battery level</string>
    <string name="about_settings">About phone</string>
    <string name="lock_settings_title">Screen unlock</string>
    <string name="lockpattern_settings_enable_visible_pattern_title">Use visible pattern</string>
    <string name="lockpattern_settings_enable_tactile_feedback_title">Use tactile feedback</string>
    <string name="lockpattern_settings_enable_visible_dots_title">Use visible dots</string>
    <string name="lockpattern_settings_show_error_path">Show incorrect path on error</string>
    <string name="lockpattern_settings_show_unlock_msg">Show unlock message</string>
    <string name="lockpattern_settings_show_unlock_error_msg">Show unlock error messages</string>
    <string name="lockpattern_settings_show_custom_msg">Show custom message</string>
    <string name="lockpattern_settings_custom_msg">Custom message</string>
    <string name="lockpattern_settings_custom_msg_dialog">Enter a custom message</string>
    <string name="lockpattern_settings_custom_msg_color">Custom message color</string>
    <string name="lockpattern_settings_incorrect_delay_title">Set incorrect pattern delay</string>
    <string name="language_settings">Language &amp; keyboard</string>
    <string name="development_settings_title">Development</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="vpn_openvpn_port">Server port</string>
    <string name="vpn_openvpn_protocol">Protocol to use</string>
    <string name="vpn_openvpn_device">Device to use</string>
    <string name="vpn_openvpn_advanced_titlebar">Advanced Openvpn Settings</string>
    <string name="vpn_openvpn_comp_lzo">LZO compression</string>
    <string name="vpn_openvpn_comp_lzo_summary">Force LZO compression to be set to on</string>
    <string name="vpn_openvpn_redirect_gateway_title">Redirect gateway</string>
    <string name="vpn_openvpn_redirect_gateway_summary">Force all traffic to berouted thru the VPN tunnel</string>
    <string name="vpn_openvpn_set_addr">Remote Sets Addresses</string>
    <string name="vpn_openvpn_set_addr_summary">Uncheck to set tunnel addresses manually</string>
    <string name="vpn_openvpn_set_local_addr">Local IP Address</string>
    <string name="vpn_openvpn_set_remote_addr">Remote IP Address</string>
    <string name="vpn_openvpn_set_cipher">Cipher algorithm</string>
    <string name="vpn_openvpn_set_cipher_message">Leave empty to use default cipher</string>
    <string name="vpn_openvpn_set_keysize">Size of cipher key</string>
    <string name="vpn_openvpn_set_keysize_message">Leave empty to use cipher-specific default</string>
    <string name="vpn_openvpn_set_extra">Extra arguments</string>
    <string name="vpn_openvpn_set_extra_message">Enter the extra command line arguments</string>
    <string name="privacy_settings">Privacy</string>
    <string name="possibleButtons">Possible Buttons</string>
    <string name="toggleWifi">Wi-Fi</string>
    <string name="toggleBluetooth">Bluetooth</string>
    <string name="toggleGPS">GPS</string>
    <string name="toggleData">Mobile Data</string>
    <string name="toggleSync">Data Sync</string>
    <string name="toggle2g3g">2G/3G</string>
    <string name="toggleSound">Ring Mode</string>
    <string name="toggleBrightness">Brightness</string>
    <string name="autoEnable3G">Data enables 3G</string>
    <string name="useRoundCorners">Round corners</string>
    <string name="useTransparent">Transparent Widget</string>
    <string name="ok">Ok</string>
</resources>