<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="match_parent" android:background="@android:drawable/screen_background_dark">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView android:id="@+id/options" android:text="@null"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@null" />

			<TextView android:id="@+id/title" android:text="@string/possibleButtons"
				android:textColor="#303030" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="?android:attr/preferenceCategoryStyle" />

			<CheckBox android:id="@+id/toggleWifi" android:text="@string/toggleWifi"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggleBluetooth" android:text="@string/toggleBluetooth"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggleGPS" android:text="@string/toggleGPS"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggleData" android:text="@string/toggleData"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggle2g3g" android:text="@string/toggle2g3g"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggleSync" android:text="@string/toggleSync"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggleSound" android:text="@string/toggleSound"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/toggleBrightness" android:text="@string/toggleBrightness"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<TextView android:id="@+id/options" android:text="@null"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@null" />

			<TextView android:id="@+id/options" android:text="@string/settings_label"
				android:textColor="#303030" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="?android:attr/preferenceCategoryStyle" />

			<CheckBox android:id="@+id/autoDisable3G" android:text="@string/autoEnable2G"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/autoEnable3G" android:text="@string/autoEnable3G"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/useRoundCorners" android:text="@string/useRoundCorners"
				android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<CheckBox android:id="@+id/useTransparent" android:text="@string/useTransparent"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<TextView android:id="@+id/space" android:text="@null"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@null" />

			<LinearLayout android:id="@+id/LinearLayout01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				style="@android:style/ButtonBar" android:orientation="horizontal">

				<Button android:layout_width="80dip"
					android:layout_height="wrap_content" android:id="@+id/okbutton"
					android:text="@string/ok"></Button>
				<Button android:layout_width="80dip"
					android:layout_height="wrap_content" android:text="@string/cancel"
					android:id="@+id/cancelbutton"></Button>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
