<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011-13 The Linux Foundation. All rights reserved
     Not a Contribution.
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/device_status_activity_title">

    <!-- for MultiSim
    <PreferenceScreen
        android:key="button_aboutphone_msim_status"
        android:title="@string/subs_settings"
        android:persistent="false">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.settings"
            android:targetClass="com.android.settings.SelectSubscription" />
    </PreferenceScreen>
    -->
    <Preference android:key="battery_status"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/battery_status_title"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="battery_level"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/battery_level_title"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />

    <!-- used for multisim -->
    <Preference android:key="number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_number"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- This menu item is only for CDMA phone -->
    <Preference android:key="min_number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_min_number"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- This menu item is only for CDMA phone -->
    <Preference android:key="prl_version"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_prl_version"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- This menu item is only for CDMA phone -->
    <Preference android:key="esn_number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_esn_number"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- This menu item is only for CDMA phone -->
    <Preference android:key="meid_number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_meid_number"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- used for multisim -->
    <Preference android:key="operator_name"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_operator"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- used for multisim -->
    <Preference android:key="signal_strength"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_signal_strength"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- used for multisim -->
    <Preference android:key="network_type"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_network_type"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- used for multisim -->
    <Preference android:key="service_state"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_service_state"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- used for multisim -->
    <Preference android:key="roaming_state"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_roaming"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- This menu item is only for GSM phone -->
    <Preference android:key="imei"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_imei"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- This menu item is only for GSM phone -->
    <Preference android:key="imei_sv"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_imei_sv"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <!-- used for multisim -->
    <Preference android:key="icc_id"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_icc_id"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="baseband_version"
        style="?android:preferenceInformationStyle"
        android:title="@string/baseband_version"
        android:summary="@string/device_info_default"/>

    <Preference android:key="data_state"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_data_state"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="wifi_ip_address"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/wifi_advanced_ip_address_title"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="wifi_mac_address"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_wifi_mac_address"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="bt_address"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_bt_address"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="serial_number"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_serial_number"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="up_time"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_up_time"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
    <Preference android:key="wimax_mac_address"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/status_wimax_mac_address"
        android:summary="@string/device_info_not_available"
        android:persistent="false" />
</PreferenceScreen>
