<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<dashboard-categories
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- SYSTEM -->
    <dashboard-category
            android:id="@+id/system_section"
            android:title="@string/header_category_system" >

        <!-- Date & Time -->
        <dashboard-tile
                android:id="@+id/date_time_settings"
                android:title="@string/date_and_time_settings_title"
                android:fragment="com.android.settings.DateTimeSettings"
                android:icon="@drawable/ic_settings_date_time"
                />

        <!-- Accessibility feedback -->
        <dashboard-tile
                android:id="@+id/accessibility_settings"
                android:title="@string/accessibility_settings"
                android:fragment="com.android.settings.accessibility.AccessibilitySettings"
                android:icon="@drawable/ic_settings_accessibility"
                />

        <!-- Storage -->
        <dashboard-tile
                android:id="@+id/storage_settings"
                android:title="@string/storage_settings"
                android:fragment="com.android.settings.deviceinfo.Memory"
                android:icon="@drawable/ic_settings_storage"
                />

        <!-- Language -->
        <dashboard-tile
                android:id="@+id/language_settings"
                android:title="@string/language_settings"
                android:fragment="com.android.settings.inputmethod.InputMethodAndLanguageSettings"
                android:icon="@drawable/ic_settings_language"
                />

        <!-- Backup and reset -->
        <dashboard-tile
                android:id="@+id/privacy_settings"
                android:title="@string/privacy_settings"
                android:fragment="com.android.settings.PrivacySettings"
                android:icon="@drawable/ic_settings_backup"
                />

        <!-- Print -->
        <dashboard-tile
                android:id="@+id/print_settings"
                android:title="@string/print_settings"
                android:fragment="com.android.settings.print.PrintSettingsFragment"
                android:icon="@drawable/ic_settings_print"
                />

        <!-- Performance -->
        <dashboard-tile
                android:id="@+id/performance_settings"
                android:title="@string/performance_settings_title"
                android:fragment="com.android.settings.cyanogenmod.PerformanceSettings"
                android:icon="@drawable/ic_settings_performance"
                settings:advanced="true"
                />

        <!-- Development -->
        <dashboard-tile
                android:id="@+id/development_settings"
                android:title="@string/development_settings_title"
                android:fragment="com.android.settings.DevelopmentSettings"
                android:icon="@drawable/ic_settings_development"
                />

        <!-- About Device -->
        <dashboard-tile
                android:id="@+id/about_settings"
                android:title="@string/about_settings"
                android:fragment="com.android.settings.DeviceInfoSettings"
                android:icon="@drawable/ic_settings_about"
                />

    </dashboard-category>
</dashboard-categories>
